Commit fix bug webkit browsers
Ok scrollbar per Google e altri bug sui browser webkit

--- a/src/Partials/_elements.scss
+++ b/src/Partials/_elements.scss
@@ -178,26 +178,51 @@ a:hover {
 =               Section SCROLLBARS          =
 ==============================================*/
 
+/* Mozilla Firefox */
     
 * {
-    scrollbar-color: transparent black; /* thumb and track color */
+    scrollbar-color: transparent black; 
     scrollbar-width: 0px;
 }
 
-*::-webkit-scrollbar {
-    width: 0;
+/* Google, Safari, Edge, Opera */
+
+*::-webkit-scrollbar {             
+    overflow: scroll;
 }
 
-*::-webkit-scrollbar-track {
-    background: transparent;
-}
-
-*::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-track {       
     background: black;
+}
+
+*::-webkit-scrollbar-thumb {        
     border: none;
 }
 
-* {
+/*===== Codice per frecce browser Webkit ======*/
+
+*::-webkit-scrollbar-button:vertical:start:decrement {
+    background:
+        linear-gradient(120deg, black 40%, rgba(0, 0, 0, 0) 41%),
+        linear-gradient(240deg, black 40%, rgba(0, 0, 0, 0) 41%),
+        linear-gradient(0deg, black 30%, rgba(0, 0, 0, 0) 31%);
+    background-color: floralwhite;
+}
+
+*::-webkit-scrollbar-button:vertical:end:increment {
+    background:
+        linear-gradient(300deg, black 40%, rgba(0, 0, 0, 0) 41%),
+        linear-gradient(60deg, black 40%, rgba(0, 0, 0, 0) 41%),
+        linear-gradient(180deg, black 30%, rgba(0, 0, 0, 0) 31%);
+    background-color: floralwhite;
+}
+
+/*===== End Codice per frecce browser Webkit ======*/
+
+
+/* Explorer */
+
+* {                                 
     -ms-overflow-style: none;
 }
 
