--- a/src/style.scss
+++ b/src/style.scss
@@ -215,7 +215,7 @@ body {
                 padding: 0 50px 0 50px;
 
                 img {
-                    width: 70%;
+                    max-width: 20vw;
                     margin-right: 40px;
                     filter: grayscale(0%);
                 }
